Fixed layout issue on papstory.html Hid order form from public view on product.html

--- a/StaticFiles/CSS/PageCSS/product-style.css
+++ b/StaticFiles/CSS/PageCSS/product-style.css
@@ -218,3 +218,14 @@
     list-style: disc inside;
     line-height: 1.5rem;
 }
+
+
+/*
+* ==========================================
+* ORDER FORM
+* ==========================================
+*/
+
+.order-form {
+    display: none;
+}
