--- a/StaticFiles/CSS/main-style.css
+++ b/StaticFiles/CSS/main-style.css
@@ -134,6 +134,12 @@ h6,
   color: var(--primary);
 }
 
+@media (max-width: 400.00px) {
+  .navbar-brand-img {
+      display: none;
+  }
+}
+
 @media (max-width: 991.98px) {
   .navbar .navbar-nav {
       margin-top: 10px;
@@ -439,6 +445,5 @@ h6,
 .copyright a:hover {
   color: var(--light);
 }
-
 
 
